--- a/src/resources/css/themes/Flat/NinjamWindow.css
+++ b/src/resources/css/themes/Flat/NinjamWindow.css
@@ -31,7 +31,8 @@ NinjamTrackView[unlighted="true"][horizontal="true"] QSlider::handle:horizontal
 #buttonGridLayout,
 #wide,
 #narrow,
-#licenceButton
+#licenceButton,
+#chordsButton
 {
     border: 1px solid rgb(150, 150, 150);
     background-color: rgba(255, 255, 255, 10);
@@ -42,7 +43,8 @@ NinjamTrackView[unlighted="true"][horizontal="true"] QSlider::handle:horizontal
 #buttonGridLayout:hover,
 #wide:hover,
 #narrow:hover,
-#licenceButton:hover
+#licenceButton:hover,
+#chordsButton:hover
 {
     border: 1px solid rgba(0, 0, 0, 50);
     background-color: rgba(255, 255, 255, 80);
