--- a/src/resources/css/themes/Rounded/Dialogs.css
+++ b/src/resources/css/themes/Rounded/Dialogs.css
@@ -5,7 +5,8 @@ QInputDialog,
 PluginScanDialog,
 MidiToolsDialog,
 PrivateServerWindow,
-#instrumentsMenu
+#instrumentsMenu,
+ChordProgressionCreationDialog
 {
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
         stop:0 rgb(250, 250, 250),
@@ -61,6 +62,12 @@ PrivateServerDialog #comboBoxServers::down-arrow:disabled,
 PrivateServerDialog #comboBoxServers::down-arrow:hover
 {
     image:url(:/images/arrow-down-lighter.png);
+}
+
+ChordProgressionCreationDialog QComboBox:focus
+{
+    border: 1px solid black;
+    border-radius: 2px;
 }
 
 BusyDialog
