--- a/src/Common/gui/JamRoomViewPanel.ui
+++ b/src/Common/gui/JamRoomViewPanel.ui
@@ -41,7 +41,16 @@
       </sizepolicy>
      </property>
      <layout class="QGridLayout" name="gridLayout">
-      <item row="0" column="2" rowspan="2" alignment="Qt::AlignBottom">
+      <property name="topMargin">
+       <number>3</number>
+      </property>
+      <property name="bottomMargin">
+       <number>3</number>
+      </property>
+      <property name="verticalSpacing">
+       <number>5</number>
+      </property>
+      <item row="0" column="2" rowspan="2">
        <widget class="QPushButton" name="buttonEnter">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
@@ -82,7 +91,7 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="1" rowspan="2" alignment="Qt::AlignBottom">
+      <item row="0" column="1" rowspan="2">
        <widget class="QPushButton" name="buttonListen">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
