--- a/src/Common/gui/JamRoomViewPanel.ui
+++ b/src/Common/gui/JamRoomViewPanel.ui
@@ -41,8 +41,14 @@
       </sizepolicy>
      </property>
      <layout class="QGridLayout" name="gridLayout">
+      <property name="leftMargin">
+       <number>6</number>
+      </property>
       <property name="topMargin">
        <number>3</number>
+      </property>
+      <property name="rightMargin">
+       <number>6</number>
       </property>
       <property name="bottomMargin">
        <number>3</number>
