Major set of fixes and feature enhancements for Standalone audio devices handling: see issue # #1144 for more details. Now All plaforms get input and output separate device selection. OSX gets device selection re-enabled and fixed. OSX gets no default unique channels anymore, now possible to use any input channel. Commented out qDebug lines of de-allocation of setttings, making really hard to read important messages. Added functionality to qDebug of settings, now displaying the values read as well (not only the property names).

--- a/src/Common/gui/PreferencesDialog.ui
+++ b/src/Common/gui/PreferencesDialog.ui
@@ -42,8 +42,15 @@
           <property name="spacing">
            <number>6</number>
           </property>
-          <item alignment="Qt::AlignVCenter">
-           <widget class="QComboBox" name="comboAudioDevice">
+          <item row="0" column="0">
+           <widget class="QLabel" name="firstInputLabel_2">
+            <property name="text">
+             <string>Input</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1">
+           <widget class="QComboBox" name="comboAudioInputDevice">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
               <horstretch>1</horstretch>
@@ -52,7 +59,24 @@
             </property>
            </widget>
           </item>
-          <item>
+          <item row="1" column="0">
+           <widget class="QLabel" name="firstInputLabel_2">
+            <property name="text">
+             <string>Output</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1">
+           <widget class="QComboBox" name="comboAudioOutputDevice">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+              <horstretch>1</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="1">
            <widget class="QPushButton" name="buttonControlPanel">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
