Windows audio device driver handling, as discussed: use a UseSingleAudioDevice bool flag to determine if user wants a signle unified audio, true for WIndows false for Mac OSX and  Linux.

--- a/src/Common/gui/PreferencesDialog.ui
+++ b/src/Common/gui/PreferencesDialog.ui
@@ -38,18 +38,18 @@
          <property name="title">
           <string>Audio Device</string>
          </property>
-         <layout class="QHBoxLayout" name="deviceLayout" stretch="0,0">
+         <layout class="QHBoxLayout" name="deviceLayout" stretch="0,0,0,0,0">
           <property name="spacing">
            <number>6</number>
           </property>
-          <item row="0" column="0">
-           <widget class="QLabel" name="firstInputLabel_2">
+          <item>
+           <widget class="QLabel" name="comboAudioInputDeviceLabel">
             <property name="text">
              <string>Input</string>
             </property>
            </widget>
           </item>
-          <item row="0" column="1">
+          <item>
            <widget class="QComboBox" name="comboAudioInputDevice">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -59,14 +59,14 @@
             </property>
            </widget>
           </item>
-          <item row="1" column="0">
-           <widget class="QLabel" name="firstInputLabel_2">
+          <item>
+           <widget class="QLabel" name="comboAudioOutputDeviceLabel">
             <property name="text">
              <string>Output</string>
             </property>
            </widget>
           </item>
-          <item row="1" column="1">
+          <item>
            <widget class="QComboBox" name="comboAudioOutputDevice">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -76,7 +76,7 @@
             </property>
            </widget>
           </item>
-          <item row="2" column="1">
+          <item>
            <widget class="QPushButton" name="buttonControlPanel">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -485,7 +485,7 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>467</width>
+               <width>484</width>
                <height>45</height>
               </rect>
              </property>
