Enhance audio device setup code, enhance settings startup logs, see Issue #1144 (#1149)
* Do not introduce organization name root based settings to keep compatibility with older settings and code. fix one comment typo.

* Fix latest merge pb on main.cpp

* Fix include files needed for Qt5.11 on osx.

* Fix Device enumeration on osx would always return the same device.

* Re-enable fixed Audio preferences to get the mac drivers back

* Major set of fixes and feature enhancements for Standalone audio devices handling: see issue # #1144 for more details.
Now All plaforms get input and output separate device selection.
OSX gets device selection re-enabled and fixed.
OSX gets no default unique channels anymore, now possible to use any input channel.
Commented out qDebug lines of de-allocation of setttings, making really hard to read important messages.
Added functionality to qDebug of settings, now displaying the values read as well (not only the property names).

* Fix typo in PoartAudio wrapper in the case of a default system devices to test missing && condition.

* Fix compile error because one line in PreferencesDialogStandalone was accidentally deleted before submission.

* Fix typo in recent change causing the preferences output device to be saved  to 0 instead of its current value

* Revert VST2 standalone overriden path, path is defined from the .pri file.

* Windows audio device driver handling, as discussed: use a UseSingleAudioDevice bool flag to determine if user wants a signle unified audio, true for WIndows false for Mac OSX and  Linux.

* Fix RtMidi would never release its mutex in the case of an error in closePort()

* Peak and SampleBuffers new optimization, achieved after profiling standalone app that showed it takes more cpu time than the asio driver task code itself (optimized code in this commit used to be close to 30% cpu now less than 20% cpu according to windows cpu profiler) :
- Preallocate sample buffers (reserve() 

--- a/src/Common/gui/PreferencesDialog.ui
+++ b/src/Common/gui/PreferencesDialog.ui
@@ -38,12 +38,36 @@
          <property name="title">
           <string>Audio Device</string>
          </property>
-         <layout class="QHBoxLayout" name="deviceLayout" stretch="0,0">
+         <layout class="QHBoxLayout" name="deviceLayout" stretch="0,0,0,0,0">
           <property name="spacing">
            <number>6</number>
           </property>
-          <item alignment="Qt::AlignVCenter">
-           <widget class="QComboBox" name="comboAudioDevice">
+          <item>
+           <widget class="QLabel" name="comboAudioInputDeviceLabel">
+            <property name="text">
+             <string>Input</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QComboBox" name="comboAudioInputDevice">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+              <horstretch>1</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLabel" name="comboAudioOutputDeviceLabel">
+            <property name="text">
+             <string>Output</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QComboBox" name="comboAudioOutputDevice">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
               <horstretch>1</horstretch>
@@ -461,7 +485,7 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>467</width>
+               <width>484</width>
                <height>45</height>
               </rect>
              </property>
