:apple: Fixing compilation in XCode 8
- Adding ChordProgressCreationDialog in the XCode Project and improving hardcoded paths

- Applying recommended settings in XCode project

- Improving library search paths

- Trying to solve missing PNGs warning

--- a/src/resources/jamtaba.qrc
+++ b/src/resources/jamtaba.qrc
@@ -463,8 +463,8 @@
         <file>emoji/categories/Flags.png</file>
         <file>emoji/categories/Food.png</file>
         <file>emoji/categories/Music.png</file>
-        <file>emoji/categories/Objects.png</file>
-        <file>emoji/categories/Recent.png</file>
+        <file>emoji/categories/objects.png</file>
+        <file>emoji/categories/recent.png</file>
         <file>emoji/categories/Skin.png</file>
         <file>emoji/categories/Smileys.png</file>
         <file>emoji/categories/Symbols.png</file>
