--- a/src/resources/css/themes/Volcano_nm/LocalTrack.css
+++ b/src/resources/css/themes/Volcano_nm/LocalTrack.css
@@ -114,7 +114,8 @@ LocalTrackView[unlighted="true"] #inputPanel:hover
     border-color: rgb(100, 100, 100);
 }
 
-#xmitButton[preparing="true"]
+#xmitButton[preparing="true"],
+#voiceChatButton:checked[blinking="true"]
 {
     background-color: rgb(255, 255, 0);
     color: black;
@@ -136,6 +137,11 @@ LocalTrackView[unlighted="true"] #inputPanel:hover
 {
     background-color: rgb(255, 40, 40);
     border-color: rgba(0, 0, 0, 90);
+}
+
+#voiceChatButton:!checked
+{
+    background-color: #87431c
 }
 
 LocalTrackView #buttonLooper:disabled
