--- a/src/resources/css/themes/Navy_nm/LocalTrack.css
+++ b/src/resources/css/themes/Navy_nm/LocalTrack.css
@@ -85,7 +85,8 @@ LocalTrackViewStandalone
     color: rgb(20, 20, 20);
 }
 
-#xmitButton[preparing="true"]
+#xmitButton[preparing="true"],
+#voiceChatButton:checked[blinking="true"]
 {
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(180, 180, 20), stop:1 rgb(80, 80, 0));
     color: rgb(20, 20, 20);
@@ -107,7 +108,12 @@ LocalTrackViewStandalone
     border-color: rgba(0, 0, 0, 90);
 }
 
-
+#voiceChatButton:!checked,
+#voiceChatButton:checked
+{
+    background-color: rgb(53, 53, 53);
+    border-color: rgba(0, 0, 0, 30);
+}
 
 LocalTrackView #inputSelectionButton            /* Button used to open the input selection menu */
 {
