--- a/src/resources/css/themes/Rounded/LocalTrack.css
+++ b/src/resources/css/themes/Rounded/LocalTrack.css
@@ -67,7 +67,8 @@ FxPanelItem QPushButton:checked
     border-color: rgb(50, 50, 50);
 }
 
-#xmitButton[preparing="true"]
+#xmitButton[preparing="true"],
+#voiceChatButton:checked[blinking="true"]
 {
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.9, stop:0 rgb(255,255,0), stop:1 rgb(204,204,0));
     color: rgb(20, 20, 20);
@@ -91,10 +92,12 @@ FxPanelItem QPushButton:checked
 
 }
 
-
-
-
-
+#voiceChatButton:!checked
+{
+    background-color: qlineargradient(x1:0, y1:0.6, x2:0, y2:1, stop:0 rgba(0, 0, 0, 30), stop:1 rgba(0, 0, 0, 50));
+    border-radius: 2px;
+    border: 1px outset rgb(100, 100, 100)
+}
 
 LocalTrackView[highlighted="true"]
 {
