--- a/src/resources/css/themes/Game_nm/LocalTrack.css
+++ b/src/resources/css/themes/Game_nm/LocalTrack.css
@@ -122,6 +122,11 @@ LocalTrackViewStandalone
     color: rgb(0, 60, 60);
 }
 
+#voiceChatButton:hover
+{
+    background-color: #69BABB;
+}
+
 LocalTrackView #inputSelectionButton            /* Button used to open the input selection menu */
 {
     background-image: url(':/images/arrow-down.png');
