--- a/src/resources/css/themes/Black_nm/LocalTrack.css
+++ b/src/resources/css/themes/Black_nm/LocalTrack.css
@@ -190,6 +190,12 @@ background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(180, 20,
     border: none;
 }
 
+#voiceChatButton:hover
+{
+    background-color: rgba(80, 80, 80, 55);
+    border: none;
+}
+
 LocalTrackGroupView #groupNameField
 {
     color: rgb(150, 150, 150);
